Edit views and styles, fix whitespace

--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -8,3 +8,7 @@ body {
 ul {
   list-style: none;
 }
+
+a {
+  text-decoration: none;
+}
